--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kitamuslim",
+  "name": "orian",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -8,17 +8,24 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "native-base": "^2.13.7",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "^1.2.0",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^3.0.0",
+    "react-navigation-material-bottom-tabs": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/runtime": "^7.6.0",
-    "@react-native-community/eslint-config": "^0.0.5",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.3.0",
-    "jest": "^24.9.0",
-    "metro-react-native-babel-preset": "^0.56.0",
+    "@babel/core": "7.5.5",
+    "@babel/runtime": "7.5.5",
+    "@react-native-community/eslint-config": "0.0.3",
+    "babel-jest": "24.9.0",
+    "eslint": "6.2.1",
+    "jest": "24.9.0",
+    "metro-react-native-babel-preset": "0.54.1",
     "react-test-renderer": "16.8.6"
   },
   "jest": {
